# humane-system-hook

./: .gitignore  README.md
docs/: AiPinServerDeployment.md
hook/: build.gradle.kts
hook/src/main/: AndroidManifest.xml
hook/src/main/kotlin/com/penumbraos/hook/: CentralServiceHooks.kt  ContactsHooks.kt  EsimLpaHooks.kt  HookComponentFactory.kt  IronmanHooks.kt  OnboardingHooks.kt  PhotographyHooks.kt  WirelessChargingBypass.kt
injector/src/main/kotlin/com/penumbraos/hook/injector/: AdbBridgeReceiver.kt  AdbWifiBridge.kt  BootInjectionReceiver.kt  PackageInjector.kt
scripts/: check-server-install-contracts.mjs
server/: Cargo.toml  build.gradle.kts  build.rs  config.toml
server-rs/: Cargo.toml  build.rs  config.toml
server-rs/src/: api.rs  config.rs  db.rs  main.rs  nearby.rs
server-rs/src/api/: contacts.rs
server-rs/src/db/: contacts.rs
server-rs/src/llm/: agent.rs  backend.rs  error.rs  mod.rs  model_router.rs  prompt.rs  request.rs  rig_backend.rs
server-rs/src/llm/memory/: embedder.rs  metadata.rs  mod.rs  service.rs  types.rs
server-rs/src/llm/providers/: anthropic.rs  echo.rs  gemini.rs  mod.rs  openai.rs
server-rs/src/llm/tools/: fastembed.rs  logcat.rs  mod.rs  native_host.rs  nearby_search.rs  registry.rs  reverse_geocode.rs  understand_scene.rs
server-rs/src/llm/tools/memory/: delete.rs  mod.rs  save.rs  search.rs  update.rs
server-rs/src/llm/tools/weather/: mod.rs  types.rs
server-rs/src/services/: aibus.rs  contacts.rs
server-rs/src/services/aibus/: completion.rs  mod.rs  nearby.rs  reverse_geocode.rs  understand.rs  weather.rs
server-rs/src/synapse/: actions.rs  conversation.rs  mod.rs  vision.rs
server-rs/src/util/: mod.rs
server/proto/humane/aibus/: aibus.proto
server/proto/humane/contacts/: contacts.proto
server/src/: config.rs  main.rs
server/src/llm/: mod.rs
server/src/main/: AndroidManifest.xml
server/src/main/assets/: bootstrap-config.toml  penumbra_tool_host
server/src/main/kotlin/com/penumbraos/server/: BootReceiver.kt  BootstrapConfig.kt  JmDnsAdvertiser.kt  NativeBridge.kt  ServerRuntime.kt  ServerService.kt
server/src/services/: aibus.rs  capture.rs  contacts.rs  featureflags.rs  mod.rs
