[package]
name = "humane-server"
version = "0.1.0"
edition = "2021"
description = "Standalone gRPC server for Humane AI Pin"

[[bin]]
name = "humane-server"
path = "src/main.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
handlebars = "6"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
async-stream = "0.3"
rig = { version = "0.37", default-features = false, features = ["reqwest", "native-tls"], package = "rig-core" }
rig-fastembed = { version = "0.4", default-features = false }
toml = "0.8"
toml_edit = "0.22"
futures = "0.3"
base64 = "0.22"
rcgen = "0.14"
aes-gcm = "0.10"
rand = "0.10"
tower-http = { version = "0.6", features = ["trace", "cors"] }
mime_guess = "2"
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
axum = { version = "0.8", features = ["multipart"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "native-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
dotenvy = "0.15"
memvid-core = { version = "=2.0.140", default-features = false, features = ["lex", "vec"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
fastembed = { version = "=5.8.0", default-features = false, features = ["ort-download-binaries"] }

[target.'cfg(target_os = "android")'.dependencies]
# Android requires openssl to be embedded
openssl = { version = "*", features = ["vendored"] }
fastembed = { version = "=5.8.0", default-features = false, features = ["ort-load-dynamic"] }

[build-dependencies]
tonic-prost-build = "0.14"
hf-hub = { version = "0.5", default-features = false, features = ["ureq", "rustls-tls"] }
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
memvid-core = { git = "https://github.com/agg23/memvid", branch = "no-lock" }
rig-core = { git = "https://github.com/agg23/rig", branch = "gemini-server-tool-passthrough" }
rig-fastembed = { git = "https://github.com/agg23/rig", branch = "gemini-server-tool-passthrough" }
