[package]
name = "humane-server"
version = "0.1.0"
edition = "2021"
description = "Standalone gRPC server for Humane AI Pin"

[[bin]]
name = "humane-server"
path = "src/main.rs"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"
rig-core = "0.34"
toml = "0.8"
futures = "0.3"
base64 = "0.22"
rcgen = "0.14"
aes-gcm = "0.10"
rand = "0.10"
tower-http = { version = "0.6", features = ["trace"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[build-dependencies]
tonic-prost-build = "0.14"
